repiared utils, removed substituion of [ and ], which simply indicates as list

--- a/stakenannyb/stakenanny.conf
+++ b/stakenannyb/stakenanny.conf
@@ -1,3 +1,3 @@
 #stakenanny conf support turbostake 
-coinlist=turbostake #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
+coinlist=turbostake,tekcoin,turbostake #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
 #full path to the turbostake.exe, need to be caped in sript
