have a fast way to check pid

--- a/stakenannyb/stakenanny.conf
+++ b/stakenannyb/stakenanny.conf
@@ -1,3 +1,5 @@
 #stakenanny conf support turbostake 
-coinlist=turbostake,tekcoin,turbostake #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
+coinlist=turbostake #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
+#place path to all the supported stake wallet directories
+turbostake=C:\Users\Noe\Desktop\Links\stakecoins
 #full path to the turbostake.exe, need to be caped in sript
