--- a/stakenannyb/stakenanny.conf
+++ b/stakenannyb/stakenanny.conf
@@ -1,6 +1,6 @@
 #stakenanny conf support turbostake
-coinlist=turbostake,paycon #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
-#place path to all the supported stake wallet directories
+coinlist=turbostake #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
+#place path to all the supported stake wallet directories eample:turbocoin=c:\stakecoins\turbocoin 1.1
 turbostake=C:\Users\Noe\Desktop\Links\stakecoins
-paycon=C:\Users\Noe\Desktop\Links\stakecoins\paycon 2.0.1
+#paycon=C:\Users\Noe\Desktop\Links\stakecoins\paycon 2.0.1
 #full path to the turbostake.exe, need to be caped in sript
