--- a/stakenannyb/stakenanny.conf
+++ b/stakenannyb/stakenanny.conf
@@ -4,3 +4,4 @@ coinlist=turbostake #This is the comma seprated list of coin wallets you run on 
 turbostake=C:\Users\Noe\Desktop\Links\stakecoins
 #paycon=C:\Users\Noe\Desktop\Links\stakecoins\paycon 2.0.1
 #full path to the turbostake.exe, need to be caped in sript
+sssss
