--- a/stakenannyb/stakenanny.conf
+++ b/stakenannyb/stakenanny.conf
@@ -1,5 +1,5 @@
-#stakenanny conf support turbostake,truckcoin
-coinlist=turbostake,truckcoin #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
+#stakenanny conf support turbostake,Truckcoin
+coinlist=turbostake,Truckcoin #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
 #place path to all the supported stake wallet directories eample:turbocoin=c:\stakecoins\turbocoin 1.1
 turbostake=C:\Users\Noe\Desktop\Links\stakecoins
 truckcoin=C:\Users\Noe\Desktop\Links\stakecoins
