added a feature to unlock the wallets for minting only when they are done loading

--- a/stakenannyb/stakenanny.conf
+++ b/stakenannyb/stakenanny.conf
@@ -1,7 +1,16 @@
-#stakenanny conf support turbostake,Truckcoin
-coinlist=turbostake,Truckcoin #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
+#stakenanny conf support turbostake
+#coinlist = turbostake, Truckcoin, tekcoin, paycon, BottleCaps, StrongHands, HyperStake, 1337, sprouts, pulse #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
+coinlist = turbostake, Truckcoin, tekcoin, paycon, BottleCaps, 1337, pulse
+#coinlist = paycon
 #place path to all the supported stake wallet directories eample:turbocoin=c:\stakecoins\turbocoin 1.1
-turbostake=C:\Users\Noe\Desktop\Links\stakecoins
-truckcoin=C:\Users\Noe\Desktop\Links\stakecoins
-#paycon=C:\Users\Noe\Desktop\Links\stakecoins\paycon 2.0.1
+turbostake = C:\Users\Noe\Desktop\Links\stakecoins
+truckcoin = C:\Users\Noe\Desktop\Links\stakecoins
+tekcoin = C:\Users\Noe\Desktop\Links\stakecoins\tek 2.4.1
+paycon = C:\Users\Noe\Desktop\Links\stakecoins\paycon 2.0.1
+BottleCaps = C:\Users\Noe\Desktop\Links\stakecoins\BottleCaps.2.2.2
+StrongHands = C:\Users\Noe\Desktop\Links\stakecoins
+HyperStake = C:\Users\Noe\Desktop\Links\stakecoins\hypersake 1.1.2
+1337 = C:\Users\Noe\Desktop\Links\stakecoins
+sprouts = C:\Users\Noe\Desktop\Links\stakecoins\Sprouts.1.2.2
+pulse = C:\Users\Noe\Desktop\Links\stakecoins
 #full path to the turbostake.exe, need to be caped in sript
