changed the rpc port to 9902 after looking up the default port in the sprouts source code.

--- a/stakenannyb/stakenanny.conf
+++ b/stakenannyb/stakenanny.conf
@@ -1,7 +1,7 @@
 #stakenanny conf support turbostake
 #coinlist = turbostake, Truckcoin, tekcoin, paycon, BottleCaps, StrongHands, HyperStake, 1337, sprouts, pulse #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
-coinlist = turbostake, Truckcoin, tekcoin, paycon, BottleCaps, 1337, pulse, HyperStake, StrongHands
-#coinlist = Truckcoin, HyperStake
+#coinlist = turbostake, Truckcoin, tekcoin, paycon, BottleCaps, 1337, pulse, HyperStake, StrongHands
+coinlist = sprouts
 #place path to all the supported stake wallet directories eample:turbocoin=c:\stakecoins\turbocoin 1.1
 turbostake = C:\Users\Noe\Desktop\Links\stakecoins
 truckcoin = C:\Users\Noe\Desktop\Links\stakecoins
