removed unnecessry code from getsynctime

--- a/stakenannyb/stakenanny.conf
+++ b/stakenannyb/stakenanny.conf
@@ -1,9 +1,10 @@
 #stakenanny conf support turbostake
-#coinlist = turbostake, Truckcoin, tekcoin, paycon, BottleCaps, StrongHands, HyperStake, 1337, sprouts, pulse #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
+coinlist = turbostake, Truckcoin, tekcoin, paycon, BottleCaps, StrongHands, HyperStake, 1337, sprouts, pulse #This is the comma seprated list of coin wallets you run on your pc that you want to manage. use name as seen in the appsdata folder contianing your wallet.dat 
 #coinlist = turbostake, Truckcoin, tekcoin, paycon, BottleCaps, 1337, pulse, HyperStake, StrongHands
 #coinlist = sprouts, turbostake
 #coinlist = sprouts
-coinlist = spots, DigiCube
+#coinlist = spots, DigiCube
+#coinlist = turbostake
 #place path to all the supported stake wallet directories eample:turbocoin=c:\stakecoins\turbocoin 1.1
 turbostake = C:\Users\Noe\Desktop\Links\stakecoins
 truckcoin = C:\Users\Noe\Desktop\Links\stakecoins
@@ -15,6 +16,6 @@ HyperStake = C:\Users\Noe\Desktop\Links\stakecoins\hypersake 1.1.2
 1337 = C:\Users\Noe\Desktop\Links\stakecoins
 sprouts = C:\Users\Noe\Desktop\Links\stakecoins\Sprouts.1.2.2
 pulse = C:\Users\Noe\Desktop\Links\stakecoins
-spots = C:\Users\Noe\AppData\Roaming\SPOTS
+spots = C:\Users\Noe\Desktop\Links\stakecoins
 DigiCube = C:\Users\Noe\Desktop\Links\stakecoins\DigiCube 1.8\DigiCube v1.8 - Windows
 #full path to the turbostake.exe, need to be caped in sript
